[package]
name = "llamars"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokenizers = "0.15.0"
memmap2 = "0.9.0"
rayon = "1.8"
clap = { version = "4.4.11", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
url = "2.5.0"
httparse = "1.8.0"
toml = "0.8.8"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[profile.release]
debug = 1
