[package]
name = "mixtral"
version = "0.1.0"
edition = "2021"

[dependencies]
tokenizers = "0.15.0"
memmap2 = "0.9.0"
rayon = "1.8"
clap = { version = "4.4.11", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
url = "2.5.0"
httparse = "1.8.0"
toml = "0.8.8"

[build-dependencies]
cc = "1.0.83"

[features]
cuda = []
